syntax = "proto3";

import "../../common/common.proto";

package account;

service AccountService {
  rpc GetAccount(GetAccountRequest) returns (GetAccountResponse) {}
  rpc GetAccounts(common.Empty) returns (GetAccountsResponse) {}
  rpc GetRequisiteByAccountNumber(GetRequisiteByAccountNumberRequest) returns (GetRequisiteByAccountNumberResponse) {}
  rpc CreateAccount(CreateAccountRequest) returns (CreateAccountResponse) {}
  rpc UpdateAccount(UpdateAccountRequest) returns(UpdateAccountResponse) {}
  rpc ConfirmBirthday(ConfirmBirthdayRequest) returns (ConfirmBirthdayResponse) {}
  rpc ConfirmEmail(ConfirmEmailRequest) returns (ConfirmBirthdayResponse) {}
  rpc ChangeStatus(ChangeStatusRequest) returns (ChangeStatusResponse) {}
}

enum Status {
  New = 0;
  Confirmed = 1;
  Banned = 2;
  Disabled = 3;
}

message Birthday {
  string date = 1;
  bool confirmed = 2;
}

message Email {
  string address = 1;
  bool confirmed = 2;
}

message Requisite {
  string id = 1;
  string accountNumber = 2;
  string currency = 3;
  float balance = 4;
  Account account = 5;
}

message Account {
  string id = 1;
  string firstname = 2;
  string lastname = 3;
  string password = 4;
  string lastSession = 5;
  Email email = 7;
  Birthday birthday = 9;
  repeated Requisite requisites = 10;
}

message CreateAccountRequest {
  string firstname = 1;
  string password = 2;
  string birthday = 3;
  string email = 4;
  string lastname = 5;
  repeated Requisite requisites = 6;
}

message CreateAccountErrors {
  string firstname = 1;
  string password = 2;
  string birthday = 3;
  string email = 4;
  string lastname = 5;
  repeated Requisite requisites = 6;
}

message CreateAccountResponse {
  CreateAccountErrors errors = 1;
  Account result = 2;
}

message UpdateAccountRequest {
  string id = 1;
  string firstname = 2;
  string birthday = 3;
  string email = 4;
  string lastname = 5;
}

message UpdateAccountErrors {
  string id = 1;
  string firstname = 2;
  string lastname = 3;
  string birthday = 4;
  string email = 5;
}

message UpdateAccountResponse {
  UpdateAccountErrors errors = 1;
  Account result = 2;
}

message GetAccountRequest {
  string id = 1;
}

message GetAccountErrors {
  string id = 1;
}

message GetAccountResponse {
  GetAccountErrors errors = 1;
  Account result = 2;
}

message GetAccountsResponse {
  repeated Account rows = 1;
  common.PageInfo pageInfo = 2;
}

message ConfirmBirthdayRequest {
  string id = 1;
}

message ConfirmBirthdayErrors {
  string id = 1;
}

message ConfirmBirthdayResponse {
  ConfirmBirthdayErrors errors = 1;
  Account result = 2;
}

message ConfirmEmailRequest {
  string id = 1;
}

message ConfirmEmailErrors {
  string id = 1;
}

message ConfirmEmailResponse {
  ConfirmEmailErrors errors = 1;
  Account result = 2;
}

message ChangeStatusRequest {
  string id = 1;
  Status status = 2;
}

message ChangeStatusErrors {
  string id = 1;
  Status status = 2;
}

message ChangeStatusResponse {
  ChangeStatusErrors errors = 1;
  Account result = 2;
}

message GetRequisiteByAccountNumberRequest {
  string accountNumber = 1;
}

message GetRequisiteByAccountNumberErrors {
  string accountNumber = 1;
}

message GetRequisiteByAccountNumberResponse {
  GetRequisiteByAccountNumberErrors errors = 1;
  Requisite result = 2;
}
